--- a/roles/image_build/templates/slurm_conf.j2
+++ b/roles/image_build/templates/slurm_conf.j2
@@ -76,9 +76,9 @@ FastSchedule=1
 #
 # LOGGING
 SlurmctldDebug=3
-#SlurmctldLogFile=
+SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdDebug=3
-#SlurmdLogFile=
+SlurmdLogFile=/var/log/slurmd.log
 JobCompType=jobcomp/none
 #JobCompLoc=
 #
@@ -93,5 +93,5 @@ JobCompType=jobcomp/none
 #AccountingStorageUser=
 #
 # COMPUTE NODES
-NodeName={{node_glob }} Procs=10 State=UNKNOWN
+NodeName={{node_glob }} Procs={{ compute_num_procs }} State=UNKNOWN
 PartitionName=batch Nodes={{ node_glob }} Default=YES MaxTime=INFINITE State=UP
