turned on slurm logging

--- a/roles/image_build/templates/slurm_conf.j2
+++ b/roles/image_build/templates/slurm_conf.j2
@@ -17,7 +17,7 @@ ControlMachine={{ hostvars[host]['inventory_hostname'] }}
 #BackupAddr=
 #
 SlurmUser=slurm
-#SlurmdUser=root
+SlurmdUser=root
 SlurmctldPort=6817
 SlurmdPort=6818
 AuthType=auth/munge
