added default when no gres_type is defined

--- a/roles/ohpc_install/templates/slurm_conf.j2
+++ b/roles/ohpc_install/templates/slurm_conf.j2
@@ -92,7 +92,7 @@ AccountingStorageEnforce=associations,limits
 #AccountingStorageUser=
 #
 #GENERAL RESOURCE
-GresTypes={{ gres_types }}
+GresTypes={{ gres_types|default("") }}
 #
 #EXAMPLE CONFIGURATION - copy,comment out, and edit
 #
