removed extraneous x11, and chrony

--- a/roles/compute_build_vnfs/templates/extend_compute_packages.j2
+++ b/roles/compute_build_vnfs/templates/extend_compute_packages.j2
@@ -8,8 +8,8 @@ EXTEND_COMPUTE="PyPAM abrt-addon-ccpp abrt-addon-kerneloops abrt-addon-python ab
                 ledmon linuxptp lm_sensors lksctp-tools ltrace lvm2 memtest86+ ncurses-term numpy \
                 oprofile oprofile-jit papi perf powertop python-volume_key rfkill rsyslog-gnutls rsyslog-gssapi rsyslog-relp \
                 scipy scl-utils sdparm sg3_utils sox squashfs-tools star strace tboot \
-                trace-cmd udftools units uuidd valgrind vim-X11 vim-enhanced \
-                virt-what volume_key wodim x86info zsh SDL abrt abrt-libs abrt-tui audit autoconf automake \
+                trace-cmd udftools units valgrind vim-enhanced \
+                virt-what volume_key x86info zsh SDL abrt abrt-libs abrt-tui audit autoconf automake \
                 blas dejavu-fonts-common dejavu-sans-fonts device-mapper-multipath-libs flac \
                 fontpackages-filesystem fprintd giflib gnuplot-common gsm jline jpackage-utils latencytop-common libcmpiCppImpl0 \
                 libao libasyncns libfprint libesmtp libjpeg-turbo-devel libIDL libproxy libproxy-bin libproxy-python \
@@ -19,8 +19,8 @@ EXTEND_COMPUTE="PyPAM abrt-addon-ccpp abrt-addon-kerneloops abrt-addon-python ab
                 libtar libXdmcp libxkbfile libxshmfence lvm2-libs numpy-f2py ORBit2 pulseaudio-libs pycairo \
                 python-argparse python-crypto python-dateutil python-matplotlib python-nose python-paramiko \
                 python-setuptools pytz qt-sqlite rhino satyr sg3_utils-libs sgml-common suitesparse theora-tools \
-                trousers tzdata-java vim-common vim-filesystem volume_key-libs wavpack xkeyboard-config xinetd xmlrpc-c \
-                xmlrpc-c-client xorg-x11-server-common xorg-x11-server-Xvfb xorg-x11-xkb-utils xterm libwsman1 \
+                trousers tzdata-java vim-common  wavpack xkeyboard-config xmlrpc-c \
+                xmlrpc-c-client libwsman1 \
                 net-snmp-utils openwsman-client openwsman-server perl-Compress-Raw-Zlib perl-Compress-Zlib perl-HTML-Parser \
                 perl-HTML-Tagset perl-IO-Compress-Base perl-IO-Compress-Zlib perl-libwww-perl perl-URI sblim-sfcb sblim-sfcc"
 
