--- a/roles/ohpc_config/templates/dhcpd.conf.j2
+++ b/roles/ohpc_config/templates/dhcpd.conf.j2
@@ -1,12 +1,68 @@
-#
-# DHCP Server Configuration file.
-#   see /usr/share/doc/dhcp*/dhcpd.conf.example
-#   see dhcpd.conf(5) man page
-#
-{% for host in groups['headnode'] %}
-server-identifier {{ hostvars[host]['inventory_hostname'] }};
-{% endfor %}
-subnet {{ private_network }} netmask {{ private_network_long_netmask }} {
-      not authoritative;
-      option subnet-mask {{ private_network_long_netmask }};
+allow booting;
+allow bootp;
+ddns-update-style interim;
+option routers default_router;
+not authoritative;
+
+option space pxelinux;
+option pxelinux.magic      code 208 = string;
+option pxelinux.configfile code 209 = text;
+option pxelinux.pathprefix code 210 = text;
+option architecture-type   code 93  = unsigned integer 16;
+
+# IB Clients
+if substring(hardware,0,1) = 20 {
+    site-option-space "pxelinux";
+    option pxelinux.magic f1:00:74:7e;
+    if exists dhcp-parameter-request-list {
+        # Always send the PXELINUX options (specified in hexadecimal)
+        option dhcp-parameter-request-list = concat(option dhcp-parameter-request-list,d0,d1,d2,d3);
+    }
+    
+    option pxelinux.pathprefix "tftp://%{IPADDR}/warewulf/";
+    
+    # Make IB PXE devices look in the correct place for their pxelinux configuration file.
+    # Ensure the configuration filename is properly zero padded.
+    option pxelinux.configfile = concat ( 
+        "pxelinux.cfg/20-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 12, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 13, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 14, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 15, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 16, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 17, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 18, 1))),2), "-",
+        suffix (concat ("0", binary-to-ascii (16, 8, "",
+          substring (option dhcp-client-identifier, 19, 1))),2));
+
+    filename "tftp://%{IPADDR}/warewulf/pxelinux.0";
+# Ethernet Clients
+} else {
+    if option architecture-type = 00:09 {
+        filename "/warewulf/syslinux64.efi";
+    } elsif option architecture-type = 00:07 {
+        filename "/warewulf/syslinux64.efi";
+    } elsif option architecture-type = 00:06 {
+        filename "/warewulf/syslinux32.efi";
+    } else {
+        filename "/warewulf/lpxelinux.0";
+    }
 }
+
+subnet %{NETWORK} netmask %{NETMASK} {
+   not authoritative;
+   # option interface-mtu 9000;
+   option subnet-mask %{NETMASK};
+
+   range {{ compute_ip_minimum }} {{ compute_ip_maximum }};
+}
+
+# Node entries will follow below
+
