--- a/roles/login_build_vnfs/templates/gmond.conf.j2
+++ b/roles/login_build_vnfs/templates/gmond.conf.j2
@@ -27,7 +27,7 @@ globals {
  * tag that will wrap all hosts collected by this instance.
  */
 cluster {
-  name = "OpenHPC"
+  name = "{{ cluster_name }}"
   owner = "unspecified"
   latlong = "unspecified"
   url = "unspecified"
