--- a/roles/pre_ohpc/templates/sshd_config.j2
+++ b/roles/pre_ohpc/templates/sshd_config.j2
@@ -46,7 +46,7 @@ SyslogFacility AUTHPRIV
 # Authentication:
 
 #LoginGraceTime 2m
-PermitRootLogin without-password
+PermitRootLogin no
 #StrictModes yes
 #MaxAuthTries 6
 #MaxSessions 10
