--- a/roles/compute_build_vnfs/templates/base_packages.j2
+++ b/roles/compute_build_vnfs/templates/base_packages.j2
@@ -1,8 +1,10 @@
-PKGLIST="basesystem bash redhat-release chkconfig coreutils e2fsprogs \
+PKGLIST="basesystem shadow-utils "
+
+PKGLIST2="redhat-release chkconfig coreutils e2fsprogs \
     ethtool filesystem findutils gawk grep initscripts iproute iputils \
     mingetty mktemp net-tools nfs-utils pam portmap procps psmisc rdate rsync \
-    sed setup shadow-utils rsyslog tcp_wrappers tzdata util-linux words zlib \
+    sed setup rsyslog tcp_wrappers tzdata util-linux words zlib \
     tar less gzip which util-linux module-init-tools udev openssh-clients \
     openssh-server dhclient pciutils vim-minimal shadow-utils strace cronie \
-    crontabs cpuspeed cpufrequtils cpio wget yum numactl libicu"
+    crontabs cpuspeed cpufrequtils cpio wget yum numactl libicu autofs"
 
