--- a/roles/ohpc_config/templates/dhcpd.conf.j2
+++ b/roles/ohpc_config/templates/dhcpd.conf.j2
@@ -3,10 +3,8 @@
 #   see /usr/share/doc/dhcp*/dhcpd.conf.example
 #   see dhcpd.conf(5) man page
 #
-{% for host in groups['headnode'] %}
-server-identifier {{ hostvars[host]['inventory_hostname'] }};
-{% endfor %}
-subnet {{ private_network }} netmask {{ private_network_long_netmask }} {
+server-identifier master;
+subnet 10.2.0.0 netmask 255.255.0.0 {
       not authoritative;
-      option subnet-mask {{ private_network_long_netmask }};
+      option subnet-mask 255.255.0.0;
 }
