added openmpi to compute template

--- a/roles/compute_build_vnfs/templates/extend_compute_packages.j2
+++ b/roles/compute_build_vnfs/templates/extend_compute_packages.j2
@@ -22,6 +22,6 @@ EXTEND_COMPUTE="PyPAM abrt-addon-ccpp abrt-addon-kerneloops abrt-addon-python ab
                 trousers tzdata-java vim-common  wavpack xkeyboard-config xmlrpc-c \
                 xmlrpc-c-client libwsman1 \
                 net-snmp-utils openwsman-client openwsman-server perl-Compress-Raw-Zlib perl-Compress-Zlib perl-HTML-Parser \
-                perl-HTML-Tagset perl-IO-Compress-Base perl-IO-Compress-Zlib perl-libwww-perl perl-URI sblim-sfcb sblim-sfcc"
+                perl-HTML-Tagset perl-IO-Compress-Base perl-IO-Compress-Zlib perl-libwww-perl perl-URI sblim-sfcb sblim-sfcc openmpi"
 
 
