--- a/roles/ohpc_install/templates/slurmdbd_conf.j2
+++ b/roles/ohpc_install/templates/slurmdbd_conf.j2
@@ -18,7 +18,7 @@ AuthType=auth/munge
 # slurmDBD info
 DbdAddr=localhost
 DbdHost=localhost
-DbdPort={{ slurm_storage_port)
+DbdPort={{ slurmdb_storage_port }}
 SlurmUser=slurm
 #MessageTimeout=300
 DebugLevel=3
@@ -32,7 +32,7 @@ PidFile=/var/run/slurmdbd.pid
 # Database info
 StorageType=accounting_storage/mysql
 StorageHost=localhost
-StoragePort={{ slurmdbd_port }}
+StoragePort={{ slurmdb_port }}
 StoragePass={{ slurmdb_sql_pass }}
 StorageUser={{ slurmdb_sql_user }}
 StorageLoc={{ slurm_acct_db }}
