Changing the node names in slurm.conf file from compute-0 to c0

--- a/roles/ohpc_install/templates/slurm_conf.j2
+++ b/roles/ohpc_install/templates/slurm_conf.j2
@@ -101,10 +101,10 @@ GresTypes={{ gres_types|default('""') }}
 #EXAMPLE CONFIGURATION - copy,comment out, and edit
 #
 #COMPUTE NODES
-NodeName=compute-0 Sockets=1 CoresPerSocket=1 State=UNKNOWN
-NodeName=compute-1 Sockets=1 CoresPerSocket=1 State=UNKNOWN
+NodeName=c0 Sockets=1 CoresPerSocket=1 State=UNKNOWN
+#NodeName=compute-1 Sockets=1 CoresPerSocket=1 State=UNKNOWN
 #NodeName=gpu-compute-1 Gres=gpu:gtx_TitanX:4 Sockets=2 CoresPerSocket=8 State=UNKNOWN
 # PARTITIONS
 #PartitionName=high Nodes=compute-[0-1] Default=YES MaxTime=INFINITE State=UP PriorityTier=10
 #PartitionName=gpu  Nodes=gpu-compute-1 Default=YES MaxTime=INFINITE State=UP PriorityTier=5 AllowGroups=slurmusers
-PartitionName=low  Nodes=compute-[0-1] Default=YES MaxTime=2-00:00:00 State=UP 
+PartitionName=low  Nodes=c0 Default=YES MaxTime=2-00:00:00 State=UP
