--- a/roles/ohpc_install/templates/slurm_conf.j2
+++ b/roles/ohpc_install/templates/slurm_conf.j2
@@ -110,4 +110,6 @@ NodeName=c0 Sockets=1 CoresPerSocket=1 State=UNKNOWN
 PartitionName=low  Nodes=c0 Default=YES MaxTime=2-00:00:00 State=UP
 
 #OOD
-NodeName=={{ ood }}
+{% if ood_provision %}
+	NodeName=={{ ood }}
+{% endif %}
