Auto discover ood mac address to avoid dependence on nic naming
Discovery avoids having to hard code the ethernet device name.
It keys off the assigned static IP for the ood node and uses that
to discover the ethernet device and mac address for the node
which is needed by warewulf file synchronization.

Ref: https://serverfault.com/a/852093

--- a/roles/ood/templates/wwnodeconf.j2
+++ b/roles/ood/templates/wwnodeconf.j2
@@ -1,4 +1,4 @@
-WWINIT_HWADDR={{ hostvars[inventory_hostname].ansible_enp0s8.macaddress }}
+WWINIT_HWADDR={{ ood_macaddress }}
 export WWINIT_HWADDR
 WWMASTER={{ headnode_private_ip }}
 export WWMASTER
