Update Jupyter form
Remove custom environment from launcher form
Remove jupyter_extra_args form launcher form
Remove number of hour form launcher form
Remove account form launcher form
Remove queue form launcher form

Hardcoded module load anaconda3 in script.sh

--- a/roles/ood_jupyter/templates/jupyter-script.sh.erb
+++ b/roles/ood_jupyter/templates/jupyter-script.sh.erb
@@ -6,7 +6,7 @@ module use {{ easybuild_prefix }}/modules/all
 #
 # Start Jupyter Notebook Server
 #
-<%= context.custom_environment %>
+module load Anaconda3
 unset XDG_RUNTIME_DIR
 # Launch the Jupyter Notebook Server
-jupyter notebook --config="${CONFIG_FILE}" <%= context.extra_jupyter_args %>
+jupyter notebook --config="${CONFIG_FILE}"
