Add custom environment back
Keeping hardcoded module load Anaconda3
 jupyter need Anaconda to be loaded in order to work

--- a/roles/ood_jupyter/templates/jupyter-script.sh.erb
+++ b/roles/ood_jupyter/templates/jupyter-script.sh.erb
@@ -7,6 +7,7 @@ module use {{ easybuild_prefix }}/modules/all
 # Start Jupyter Notebook Server
 #
 module load Anaconda3
+<%= context.custom_environment %>
 unset XDG_RUNTIME_DIR
 # Launch the Jupyter Notebook Server
 jupyter notebook --config="${CONFIG_FILE}"
