Remove module use in script
Since we have synced lmod.sh in place, no need to call module use here
Instead, we call module reset here to load all default module

--- a/roles/ood_jupyter/templates/jupyter-script.sh.erb
+++ b/roles/ood_jupyter/templates/jupyter-script.sh.erb
@@ -2,7 +2,7 @@
 
 # Set working directory to home directory
 cd "${HOME}"
-module use {{ easybuild_prefix }}/modules/all
+module reset
 #
 # Start Jupyter Notebook Server
 #
