--- a/roles/ood_vnc_form/files/custom-novnc.html.erb
+++ b/roles/ood_vnc_form/files/custom-novnc.html.erb
@@ -1,4 +1,2 @@
-<%= link_to icon('fas', 'eye', 'Launch Desktop in new tab'), novnc_link(connect), class: 'btn btn-pri
-mary', target: '_blank' %>
-<%= link_to 'View Only (Share-able Link)', novnc_link(connect, view_only: true), class: 'btn btn-defa
-ult pull-right', target: '_blank' %>
+<%= link_to icon('fas', 'eye', 'Launch Desktop in new tab'), novnc_link(connect), class: 'btn btn-primary', target: '_blank' %>
+<%= link_to 'View Only (Share-able Link)', novnc_link(connect, view_only: true), class: 'btn btn-default pull-right', target: '_blank' %>
