--- a/roles/ood_user_reg_cloud/templates/wsgi.j2
+++ b/roles/ood_user_reg_cloud/templates/wsgi.j2
@@ -1,12 +1,9 @@
-#!/bin/python
-
-# Activate virtualenv
-activate_this = '{{ user_register_app_path }}/venv/bin/activate_this.py'
-execfile(activate_this, dict(__file__=activate_this))
-
 import sys
 import os
+
 sys.path.append("{{ user_register_app_path }}")
 os.environ['FLASK_CONFIG'] = 'production'
-
 from run import app as application
+
+if __name__ == "__main__":
+    application.run(host="0.0.0.0")
