Change file to template for ohpc services
Since we introduced variable rabbitmq_agents_loc,
 change to template can utilize the variable

--- a/roles/ohpc_add_rabbitmq_agents/templates/slurm_account.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/slurm_account.j2
@@ -8,7 +8,9 @@ Type=simple
 Restart=always
 RestartSec=1
 User=centos
-ExecStart=/usr/bin/env python /opt/rabbitmq_agents/slurm_agent.py
+WorkingDirectory={{ rabbitmq_agents_loc }}
+Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin"
+ExecStart={{ rabbitmq_agents_loc }}/venv/bin/python slurm_agent.py
 
 [Install]
 WantedBy=multi-user.target
