Modifying service file to run gunicorn

--- a/roles/ood_user_reg_cloud/templates/service.j2
+++ b/roles/ood_user_reg_cloud/templates/service.j2
@@ -7,7 +7,7 @@ User={{ RegUser_app_user }}
 Group=apache
 WorkingDirectory={{ user_register_app_path }}
 Environment="PATH={{ user_register_app_path }}/venv/bin"
-ExecStart={{ user_register_app_path }}/venv/bin/uwsgi --ini {{ user_register_app }}.ini
+ExecStart={{ user_register_app_path }}/venv/bin/gunicorn -k gevent -c {{ user_register_app }}.ini wsgi:application
 
 [Install]
 WantedBy=multi-user.target
