Add the source for this config file

--- a/roles/ood_user_reg_cloud/templates/ini.j2
+++ b/roles/ood_user_reg_cloud/templates/ini.j2
@@ -1,5 +1,5 @@
 # Sample Gunicorn configuration file.
-
+# Location of https://github.com/benoitc/gunicorn/blob/master/examples/example_config.py
 #
 # Server socket
 #
