Add RMQ venv path to exisiting PATH(not replace)

--- a/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
@@ -9,8 +9,8 @@ Restart=always
 RestartSec=1
 User=centos
 WorkingDirectory={{ rabbitmq_agents_loc }}
-Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin"
 ExecStart={{ rabbitmq_agents_loc }}/venv/bin/python {{ item.name }}_create.py
+Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin:$PATH"
 
 [Install]
 WantedBy=multi-user.target
