Access PATH env var by using ansible's lookup plugin

--- a/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
@@ -9,7 +9,7 @@ Restart=always
 RestartSec=1
 User=centos
 WorkingDirectory={{ rabbitmq_agents_loc }}
-Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin:$PATH"
+Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin:{{ lookup('env','PATH') }}"
 ExecStart={{ rabbitmq_agents_loc }}/venv/bin/python {{ item.name }}.py
 
 [Install]
