Feat add rmq agent user (#202)
* Add some variabls related to RabbitMQ

* Use template for config file

* Remove unused tasks

* Add vhost in RabbitMQ

* Add user in RabbitMQ

* Install pip requirements in venv

* Change file to template for ohpc services

Since we introduced variable rabbitmq_agents_loc,
 change to template can utilize the variable

* Change copy to template in ood role

* Update location with variable rabbitmq_agents_loc

* Install requirements in venv in ood role

* Remove extra arguments in task

* Make agents repo URL as variable

* Add suffix to agent services

* Make agents repo version as variable

* Adjust task name

* Merge two starting service task

replace with loop

* Merge two agents into one template

* Modify script name in agent template

* Add RMQ venv path to exisiting PATH(not replace)

* Change old naming convention for agents in service file template.

* Add RMQ agents to the tasks to install.

* Add the RMQ related vars for new agents.

* Access PATH env var by using ansible's lookup plugin

* Add user variable for rabbitMQ agent services

* Parameterize the user in RMQ agent service template file

Co-authored-by: Bo-Chun Louis Chen(VM) <louistw@uab.edu>

--- a/roles/ood_add_rabbitmq_agents/templates/ood_account_agent.j2
+++ b/roles/ood_add_rabbitmq_agents/templates/ood_account_agent.j2
@@ -8,7 +8,9 @@ Type=simple
 Restart=always
 RestartSec=5
 User=centos
-ExecStart=/usr/bin/env python3 /opt/rabbitmq_agents/ood_account_create.py
+WorkingDirectory={{ rabbitmq_agents_loc }}
+Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin"
+ExecStart={{ rabbitmq_agents_loc }}/venv/bin/python ood_account_create.py
 
 [Install]
 WantedBy=multi-user.target
