Feat deploy new rmq dir structure (#205)
* Add some variabls related to RabbitMQ

* Use template for config file

* Remove unused tasks

* Add vhost in RabbitMQ

* Add user in RabbitMQ

* Install pip requirements in venv

* Change file to template for ohpc services

Since we introduced variable rabbitmq_agents_loc,
 change to template can utilize the variable

* Change copy to template in ood role

* Update location with variable rabbitmq_agents_loc

* Install requirements in venv in ood role

* Remove extra arguments in task

* Make agents repo URL as variable

* Add suffix to agent services

* Make agents repo version as variable

* Adjust task name

* Merge two starting service task

replace with loop

* Merge two agents into one template

* Modify script name in agent template

* Add RMQ venv path to exisiting PATH(not replace)

* Change old naming convention for agents in service file template.

* Add RMQ agents to the tasks to install.

* Add the RMQ related vars for new agents.

* Access PATH env var by using ansible's lookup plugin

* Add user variable for rabbitMQ agent services

* Parameterize the user in RMQ agent service template file

* Change which RMQ agents are installed based on prod or dev deploy

For a prod deploy only agents inside prod_rmq_agents are deployed.
For a dev deploy only agents inside dev_rmq_agents are deployed.
The agent template agent.j2 requires the PYTHONPATH to be set for
agents to refer to rc_rmq and rc_util modules.
The working dir in the agent is set in accordance with dev/prod deploy.

* Use cod_deploy flag to decide which of dev/prod agents to deploy.

Co-authored-by: Bo-Chun Louis Chen(VM) <louistw@uab.edu>
Co-authored-by: rtripath89 <ravi89@uab.edu>

--- a/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
@@ -8,6 +8,10 @@ Type=simple
 Restart=always
 RestartSec=1
 User={{ rabbitmq_agents_service_user }}
+WorkingDirectory={{ item | dirname }}
+Environment="PYTHONPATH={{ rabbitmq_agents_loc }}"
+Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin:{{ lookup('env','PATH') }}"
+ExecStart={{ rabbitmq_agents_loc }}/venv/bin/python {{ item | basename | splitext | first }}.py
 WorkingDirectory={{ rabbitmq_agents_loc }}
 Environment="PATH={{ rabbitmq_agents_loc }}/venv/bin:{{ lookup('env','PATH') }}"
 ExecStart={{ rabbitmq_agents_loc }}/venv/bin/python {{ item.name }}.py
