Update Config.j2 to change mailserver related var

--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -17,7 +17,7 @@ User_dirs = {{ user_dirs }}
 rc_users_ldap_repo_loc = "{{ rc_users_ldap_repo_loc }}"
 
 # Config related to email
-Server = "{{ mail_server }}"
+Mail_server = "{{ mail_server }}"
 Admin_email = "{{ admin_email }}"
 Sender = "{{ sender }}"
 Sender_alias = "{{ sender_alias }}"
