Fixed rnode uri
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/ood_install/templates/ood_portal.yml.j2
+++ b/roles/ood_install/templates/ood_portal.yml.j2
@@ -224,7 +224,7 @@ node_uri: '/node'
 # Example:
 #     rnode_uri: '/rnode'
 # Default: null (disable this feature)
-rnode_uri: '/node'
+rnode_uri: '/rnode'
 
 #
 # Per-user NGINX Passenger apps
