Update rabbit config template

--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -15,6 +15,7 @@ User_dirs = {{ user_dirs }}
 
 # git_commit agent config
 rc_users_ldap_repo_loc = "{{ rc_users_ldap_repo_loc }}"
+db_path = "{{ rabbitmq_agents_db_path }}"
 
 # Config related to email
 Mail_server = "{{ mail_server }}"
