--- a/roles/ood_user_reg_cloud/templates/vars.j2
+++ b/roles/ood_user_reg_cloud/templates/vars.j2
@@ -4,6 +4,7 @@ key = "{{ user_register_app_key }}"
 broker_url =  'amqp://' + id + ':' + password + '@{{ rabbitmq_host }}:5672/'
 message_queue =  broker_url + 'socketio'
 default_referrer = "/pun/sys/dashboard"
+cors_allowed_origins= "{{ cors_allowed_origins }}"
 username_key = ["REMOTE_USER"]
 fullname_key = ["REMOTE_USER_DISPLAYNAME"]
 email_key = ["REMOTE_USER_MAIL"]
