Specify config file for cron job

--- a/roles/lmod_db/templates/cron.j2
+++ b/roles/lmod_db/templates/cron.j2
@@ -3,7 +3,7 @@
 cd {{ lmod_module_tracking_loc }}
 
 for i in /var/log/moduleUsage.log-*; do
-  ./store_module_data $i
+  ./store_module_data --confFn={{ lmod_db }}_db.conf $i
   if [ "$?" -eq 0 ]; then
     mv $i {{ lmod_archive_loc }}
   fi
