Update logrotate.j2 by c hanging logrotate time to weekly rather then size, and running a postrotate script to restart the service

--- a/roles/ood_user_reg_cloud/templates/logrotate.j2
+++ b/roles/ood_user_reg_cloud/templates/logrotate.j2
@@ -2,6 +2,9 @@
   missingok
   copytruncate
   notifempty
-  size 1M
+  weekly
   compress
+  postrotate
+      /sbin/service {{ user_register_app }} restart > /dev/null 2>/dev/null || true
+  endscript
 }
