Added listen:80 for WareWulf httpd config.
Signed-off-by: AriannaMartin <martinar4@student.swosu.edu>

--- a/roles/ohpc_config/templates/warewulf-httpd.conf.j2
+++ b/roles/ohpc_config/templates/warewulf-httpd.conf.j2
@@ -1,3 +1,5 @@
+Listen {{ headnode_private_ip }}:80
+
 <VirtualHost {{ headnode_private_ip }}:80>
   ServerName warewulf.local
   <IfModule !perl_module>
