Feat user state (#293)
* Add valid user state in group_vars

* Add valid user state in rabbit config template

* Add new user auth script

* Update task with new auth script

* Remove old auth script

* Make user auth script a template

* Remove executable permission from template

* Add urldecode function

* Add regex in user_auth

* Do urldecode on argument

* Use regex to extract username

* Update user auth template

user_auth.py has been move to top level in rabbitmq folder
so modify the template to match the path

* Make user auth regex a variable

* Add comment for ood_user_regex

--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -5,6 +5,7 @@ VHost = "{{ rabbitmq_vhost }}"
 Server = "{{ rabbitmq_host }}"
 Port = {{ rabbitmq_port }}
 
+Valid_state = {{ valid_user_state }}
 
 # time delay to let account creation finish 
 # to avoid concurrency with downstream agents
